--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-  "title":"Brevifolia",
+  "title":"KOZANOSTRA",
   "description":"Starter blog using Tina CMS with Next.js.",
   "repositoryUrl":"https://github.com/kendallstrautman/brevifolia-next-tinacms"
 }
