--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "gray-matter": "^4.0.2",
     "next": "^9.4.4",
     "node-glob": "^1.2.0",
@@ -22,7 +23,7 @@
     "webpack": "^4.42.1"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "next"
