--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "gray-matter": "^4.0.2",
+    "jquerry": "^2.0.0",
     "next": "^9.5.5",
     "node-glob": "^1.2.0",
     "raw-loader": "^4.0.2",
