--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-markdown": "^4.3.1",
+    "update": "^0.7.4",
     "webpack": "^4.44.2",
     "yarn": "^1.22.10"
   },
